scripts/nullaway/annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8.txt
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/ch/DefaultRIFCSHandler.java:47: error: [NullAway] assigning @Nullable expression to @NonNull field
    private Document doc = null;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/example/SampleRIFCSRead.java:69: error: [NullAway] dereferenced expression list is @Nullable
        for (Iterator<RegistryObject> i = list.iterator(); i.hasNext();) {
                                              ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/example/SampleRIFCSRead.java:72: error: [NullAway] dereferenced expression c is @Nullable
            Iterator<Name> j = c.getNames().iterator();
                                ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/RIFCS.java:41: error: [NullAway] assigning @Nullable expression to @NonNull field
    private Document doc = null;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/RIFCS.java:110: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.doc = d;
                 ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/RIFCS.java:193: error: [NullAway] dereferenced expression rosByClass.get(r.getObjectClassName()) is @Nullable
        rosByClass.get(r.getObjectClassName()).add(r);
                                              ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/RIFCS.java:208: error: [NullAway] dereferenced expression rosByClass.get(ro.getObjectClassName()) is @Nullable
            rosByClass.get(ro.getObjectClassName()).add(ro);
                                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/RegistryObject.java:346: error: [NullAway] dereferenced expression objectClass is @Nullable
        if (objectClass.equals(Constants.ELEMENT_COLLECTION)) {
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/RIFCSElement.java:38: error: [NullAway] assigning @Nullable expression to @NonNull field
    private Element e = null;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/Collection.java:559: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return aRights;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/Activity.java:421: error: [NullAway] dereferenced expression subject is @Nullable
        subject.setValue(value);
               ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/Party.java:367: error: [NullAway] dereferenced expression subject is @Nullable
        subject.setValue(value);
               ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/Service.java:397: error: [NullAway] dereferenced expression subject is @Nullable
        subject.setValue(value);
               ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/Service.java:652: error: [NullAway] dereferenced expression policy is @Nullable
        policy.setValue(accessPolicyVal);
              ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/RIFCSWrapper.java:138: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return this.rifcs;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/RIFCSWrapper.java:149: error: [NullAway] dereferenced expression doc is @Nullable
        DOMImplementation impl = doc.getImplementation();
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/base/ROElement.java:35: error: [NullAway] assigning @Nullable expression to @NonNull field
    private Element e = null;
                    ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url39209c0557_au_research_ANDS_RIFCS_API_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionV1Dot6Number1J8/src/org/ands/rifcs/example/SampleRIFCSBuildCollectionV1Dot3Number1.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
17 errors
